2006-06-15 Borut Razem <borut.razem AT siol.net>

	* components/sdcc.mk, components/sdcc-extra.mk, lib/bootstrap.mk,
	  lib/doc-archive.mk, lib/variables.mk: preparation for common ORIG tree

2006-06-11 Borut Razem <borut.razem AT siol.net>

	* lib/src-archive.mk, lib/variables.mk: introduced SNAPSHOTID
	* lib/bootstrap.mk: introduced SNAPSHOTID; replaced '_' with '-' in the
	  WIN32 setup name; introduced do-upload target
	* lib/doc-archive.mk: temporary files moved from tmp to build directory,
	  snapshot packages moved to ../snapshots/docs directory
	* lib/fetch.mk: spaces replaced with a tab

2006-05-18  Bernhard Held <bernhard AT bernhardheld.de>

	* components/src-archive.mk: added RELEASE to src-archives, extracted
	from ChangeLog

2006-05-17  Bernhard Held <bernhard AT bernhardheld.de>

	* components/variables.mk: added SDCCRELEASE, extracted from ChangeLog
	* components/bootstrap.mk: added SDCCRELEASE to tarball names

2006-05-09  Bernhard Held <bernhard AT bernhardheld.de>

	* components/sdcc-extra.mk (sdcc-extra): sdcc-extra now needs configuring

2006-05-06 Borut Razem <borut.razem AT siol.net>

	* lib/doc-archive.mk: get sdcc_theme_navbar.html from $(_DOC_ARCHIVE_SUPPORT_DIR)
	* support/sdcc_theme.pl: added svn:executable property, ...
	* support/sdcc_theme_navbar.html: added
	* README: added desctiption of the tmp directory
	* lib/bootstrap.mk, lib/doc-archive.mk, lib/src-archive.mk, lib/variables.mk:
	  definition of BUILDDATE moved to variables.mk
	* sdcc-build-bootstrap.sh: make $EXTRATARGETS after crontab-spawn

2006-05-05 Borut Razem <borut.razem AT siol.net>

	* Makefile: include lib/doc-archive.mk
	* lib/doc-archive.mk, support/sdcc_theme.pl: added

2006-05-02 Borut Razem <borut.razem AT siol.net>

	* local/amd64-linux1.mk: added SDCCCONFIGUREFLAGS = --enable-doc
	  to configure the doc Makefile and OPT_ENABLE_DOC = 1 to run the
	  doc Makefile

2006-05-01  Bernhard Held <bernhard AT bernhardheld.de>
