@@ -1,3 +1,9 @@
+2006-06-17 Borut Razem <borut.razem AT siol.net>
+
+	* lib/doc-archive.mk: run configure from the current (SRC) directory
+	* lib/variables.mk: get current SVN release from
+	  sdcc-builder@shell.cf.sourceforge.net
+
 2006-06-15 Borut Razem <borut.razem AT siol.net>
 
 	* components/sdcc.mk, components/sdcc-extra.mk, lib/bootstrap.mk,
